completed join-section and contact us section

--- a/src/home.html
+++ b/src/home.html
@@ -370,7 +370,7 @@
             <div class="max-w-[1212px] mx-auto xl:px-0 px-8">
                 <div class="text-[#ccc] ">
                     <div class="">
-                        <a href="#" class="underline text-[18px] ">Questions? Contact us.</a>
+                        <a href="contactus.html" class="underline text-[18px] ">Questions? Contact us.</a>
                     </div>
                     <div class="grid xl:grid-cols-4 lg:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-3 pt-9">
                         <a href="#" class="underline text-[16px] ">FAQ</a>
