completed helpcenter.html and fix some syntax error in contactus.html

--- a/src/contactus.html
+++ b/src/contactus.html
@@ -39,7 +39,7 @@
                             <path d="M225 0l349 983c76 3 136 9 203 17L423 0H225" fill="#e50914"></path>
                         </svg>
                     </a>
-                    <a href="#" class="text-white sm:text-lg sm:font-regular font-semibold self-start">Help Center</a>
+                    <a href="helpcenter.html" class="text-white sm:text-lg sm:font-regular font-semibold self-start">Help Center</a>
                 </div>
                 <div class="flex item-end sm:flex-row flex-col xss:justify-end xss:items-center gap-[20px]">
                     <div>
