--- a/src/helpcenter.html
+++ b/src/helpcenter.html
@@ -60,48 +60,57 @@
         </div>
     </header>
 
-    <section class="bg-custom-radial  px-[12px]">
-        <div class="flex flex-col items-center justify-center max-w-[600px] mx-auto">
-            <div class="pt-[200px] ">
-                <h1 class="text-[40px] text-center font-bold">How can we help?</h1>
-            </div>
-            <div class="sticky top-0 pt-4 w-full bg-white shadow-md">
-                <div class="relative max-w-[600px] mx-auto">
-                    <input type="text" class="placeholder:text-[16px] p-[9px_16px_9px_56px] w-full bg-border-radial"
-                        placeholder="Type a question, topic or issue">
-                    <i
-                        class="fa-solid fa-magnifying-glass text-lg absolute left-4 top-1/2 transform -translate-y-1/2"></i>
-                </div>
-            </div>
-            <div class=" grid grid-cols-1">
-                <div class="pt-4 tracking-tight text-center px-6 pb-[200px]">
-                    <span class="text-[16px] text-[rgba(0,0,0,0.7)] font-bold after:content-[':']  pt-4">Popular
-                        topics</span>
-                    <a href="#"
-                        class="text-[rgba(0,0,0,0.7)] after:content-[','] text-[16px]  underline hover:text-black transition duration-200 ease delay-50">How
-                        to sign up for Netflix
-                    </a>
-                    <a href="#"
-                        class="text-[rgba(0,0,0,0.7)] after:content-[','] text-[16px]  underline hover:text-black transition duration-200 ease delay-50">Plans
-                        and Pricing
-                    </a>
-                    <a href="#"
-                        class="text-[rgba(0,0,0,0.7)] after:content-[','] text-[16px]  underline hover:text-black transition duration-200 ease delay-50">Can't
-                        sign in to Netflix
-                    </a>
-                    <a href="#"
-                        class="text-[rgba(0,0,0,0.7)] after:content-[','] text-[16px]  underline hover:text-black transition duration-200 ease delay-50">Parental
-                        controls on Netflix
-                    </a>
-                </div>
-            </div>
 
-            <div class="flex flex-col items-center justify-center font-bold gap-4 group">
-                <a href="#explore-topics" class="group-hover:underline text-[16px]">Explore Topics</a>
-                <i class="fa-solid fa-arrow-down group-hover:animate-[bounce_0.5s_ease-in-out_2] text-[20px]"></i>
+    <div class="bg-custom-radial  px-[12px] flex flex-col items-center justify-center max-w-[600px] mx-auto">
+        <div class="pt-[200px] ">
+            <h1 class="text-[40px] text-center font-bold">How can we help?</h1>
+        </div>
+    </div>
+
+    <div class="flex flex-col bg-white py-5  items-center sticky top-0 pt-4 justify-center max-w-[600px]  mx-auto">
+        <div class="w-full">
+            <div class="relative">
+                <input type="text" class="placeholder:text-[16px] p-[9px_16px_9px_56px] w-full bg-border-radial"
+                    placeholder="Type a question, topic or issue">
+                <i class="fa-solid fa-magnifying-glass text-lg absolute left-4 top-1/2 transform -translate-y-1/2"></i>
             </div>
         </div>
-    </section>
+    </div>
+    
+    <div class="flex flex-col items-center justify-center max-w-[600px] mx-auto">
+        <div class=" grid grid-cols-1">
+            <div class="pt-4 tracking-tight text-center px-6 pb-[200px]">
+                <span class="text-[16px] text-[rgba(0,0,0,0.7)] font-bold after:content-[':']  pt-4">Popular
+                    topics</span>
+                <a href="#"
+                    class="text-[rgba(0,0,0,0.7)] after:content-[','] text-[16px]  underline hover:text-black transition duration-200 ease delay-50">How
+                    to sign up for Netflix
+                </a>
+                <a href="#"
+                    class="text-[rgba(0,0,0,0.7)] after:content-[','] text-[16px]  underline hover:text-black transition duration-200 ease delay-50">Plans
+                    and Pricing
+                </a>
+                <a href="#"
+                    class="text-[rgba(0,0,0,0.7)] after:content-[','] text-[16px]  underline hover:text-black transition duration-200 ease delay-50">Can't
+                    sign in to Netflix
+                </a>
+                <a href="#"
+                    class="text-[rgba(0,0,0,0.7)] after:content-[','] text-[16px]  underline hover:text-black transition duration-200 ease delay-50">Parental
+                    controls on Netflix
+                </a>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="flex flex-col items-center justify-center max-w-[600px] mx-auto">
+        <div class="flex flex-col items-center justify-center font-bold gap-4 group">
+            <a href="#explore-topics" class="group-hover:underline text-[16px]">Explore Topics</a>
+            <i class="fa-solid fa-arrow-down group-hover:animate-[bounce_0.5s_ease-in-out_2] text-[20px]"></i>
+        </div>
+    </div>
+
+
 
     <section class="px-[12px] mt-20 " id="explore-topics">
         <div class="max-w-[600px] mx-auto">
@@ -161,7 +170,7 @@
                         </svg>
                     </div>
                     <div class="flex items-center justify-between px-1 py-[10px]">
-                        <a href="#" class="xs:text-[17px] text-[15px] font-semibold">Paying for Netflix</a>
+                        <a href="#" class="xs:text-[17px] text-[15px] font-semibold">Problems Watching</a>
                         <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
                             <path fill-rule="evenodd"
                                 d="M5.65 7.92L12 13.37l6.35-5.45 1.3 1.52L12 16 4.35 9.44l1.3-1.52z"></path>
